--- a/src/privacy.html
+++ b/src/privacy.html
@@ -2,16 +2,15 @@
 <html lang="EN">
 
 <head>
-    <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
-
     <title>MyWebClass.org | Our Story</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <meta charset="UTF-8">
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
+    <meta content="Callie Bryan Truong" name="author"/>
     <meta content="The story and mission of MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
@@ -19,37 +18,30 @@
     <meta content="" property="og:description"/>
     <meta content="assets/images/logo.png" property="og:image"/>
     <meta content="" property="og:url"/>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L4VFG6HE1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-L4VFG6HE1H');
+    </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
 <body>
 <div class="container-fluid">
     <header class="fixed-top" role="banner">
-        <nav aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark " role="navigation">
-            <div class="container">
-                <a class="navbar-brand" href="/">MyWebClass.org</a>
-                <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"
-                        class="navbar-toggler"
-                        data-bs-target="#navbarCollapse" data-bs-toggle="collapse" type="button">
-                    <span aria-hidden="true" class="navbar-toggler-icon"></span>
-                    <span class="visually-hidden">Toggle navigation</span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="content.html">Content Template</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
         <nav aria-label="Breadcrumb" class="py-3 d-none d-md-block">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-auto text-start">
                         <ol class="breadcrumb my-0">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li aria-current="page" class="breadcrumb-item active">Content Template</li>
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                            <li aria-current="page" class="breadcrumb-item active">Privacy Policy</li>
                         </ol>
                     </div>
                 </div>
@@ -59,86 +51,64 @@
 
     <div class="container">
         <div class="row">
-            <!-- Sidebar menu with scrollspy -->
-            <nav class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed" id="sidebarMenu">
-                <div class="position-sticky pt-3">
-                    <h2 class="justify-left">Navigation</h2>
-                    <!-- Javascript builds out the navigation items -->
-                </div>
-            </nav>
-
             <!-- Main content area -->
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
-
                 <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
-              January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
-                </div>
+                <div class="text-muted mb-3 ">By <a href="#">Callie Bryan Truong</a><span class="text-muted me-3">. Last Updated: March 21, 2023</span></div>
+                <div class="text-muted">Site visits: <span id="readingTime">0</span></div>
                 <section class="row">
-                    <h1>Privacy Policy</h1>
+                    <h1>Privacy Policy for MyWebClass.org</h1>
 
-                    <p>We at mywebclass.org are committed to protecting your privacy. This Privacy Policy explains what
-                        information we collect from you when you visit our website, how we use it, and how we protect
-                        it. By using our website, you agree to the terms of this Privacy Policy.</p>
-                    <h2>Information we collect</h2>
-                    <p>We may collect the following information from you when you visit our website:</p>
-                    <ul>
-                        <li>Personal information such as your name and email address, if you choose to provide it to
-                            us.
-                        </li>
-                        <li>Information about your use of the website, such as pages visited, time spent on the site,
-                            and links clicked.
-                        </li>
-                        <li>Information about your device, such as your IP address, browser type, and operating
-                            system.
-                        </li>
-                    </ul>
-                    <h2>How we use your information</h2>
-                    <p>We use the information we collect from you for the following purposes:</p>
-                    <ul>
-                        <li>To improve our website and the user experience.</li>
-                        <li>To analyze user behavior and measure the effectiveness of our content and marketing
-                            efforts.
-                        </li>
-                        <li>To communicate with you about our products and services, if you have provided us with your
-                            contact information.
-                        </li>
-                        <li>To comply with legal obligations.</li>
-                    </ul>
+                    <p>MyWebClass.org was created for and is intended to be used for the IS218 (Spring 2023) course at the
+                        New Jersey Institute of Technology, taught by Professor Keith Williams. This page is used to inform
+                        website visitors regarding our policies with the collection, use, and disclosure of Personal Information.</p>
+
+                    <p>If you choose to use our website, then you agree to the collection and use of information in relation with
+                        this policy. The Personal Information that we collect is used for providing and improving the service.
+                        We will not use or share your information with anyone except as described in this Privacy Policy.</p>
+
+                    <h2>Information Collection and Use</h2>
+
+                    <p>While using our Site, we may ask you to provide us with certain personally identifiable information that can be
+                        used to contact or identify you. Personally identifiable information may include, but is not limited to your
+                        name, email address, phone number, postal address, and other similar information.</p>
+
+                    <p>We may also collect non-personally identifiable information about your visit to the Site, such as the pages
+                        viewed, the time spent on the Site, and the websites visited just before and just after our Site.
+                        This information is collected through the use of cookies and Google Analytics.</p>
+
                     <h2>Google Analytics</h2>
-                    <p>We use Google Analytics to collect information about your use of our website. Google Analytics
-                        collects information such as how often users visit the site, what pages they visit when they do
-                        so, and what other sites they used prior to coming to our website. We use the information we get
-                        from Google Analytics to improve our website and the user experience. Google Analytics collects
-                        only the IP address assigned to you on the date you visit our website, rather than your name or
-                        other identifying information. We do not combine the information collected through the use of
-                        Google Analytics with personally identifiable information. Google Analytics plants a permanent
-                        cookie on your web browser to identify you as a unique user the next time you visit our website.
-                        This cookie cannot be used by anyone other than Google. Google’s ability to use and share
-                        information collected by Google Analytics about your visits to our website is restricted by the
-                        Google Analytics Terms of Use and the Google Privacy Policy.</p>
-                    <h2>Data retention and security</h2>
-                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
-                        it was collected, unless a longer retention period is required by law. We take reasonable
-                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
-                        access, disclosure, alteration, and destruction.</p>
-                    <h2>Data retention and security</h2>
-                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
-                        it was collected, unless a longer retention period is required by law. We take reasonable
-                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
-                        access, disclosure, alteration, and destruction.</p>
-                    <h2>Your rights</h2>
-                    <p>You have the right to access, correct, and delete your personal information. You also have the
-                        right to object to the processing of your personal information and to withdraw your consent to
-                        the processing of your personal information. To exercise these rights, please contact us at
-                        [contact email address].</p>
-                    <h2>Changes to this Privacy Policy</h2>
-                    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting
-                        the new Privacy Policy on this page. We recommend that you review this Privacy Policy
-                        periodically for any changes.</p>
-                    <h2>Contact us</h2>
-                    <p>If you have any questions about this Privacy Policy, please contact us at [contact email
-                        address].</p>
+
+                    <p>We use Google Analytics to collect information about visitor behavior on our Site. This information is used to
+                        compile reports and to help us improve the Site. The information collected is anonymous and does not personally
+                        identify you. It includes data such as the type of device and browser you are using, your geographic location, the
+                        pages you view, and the duration of your visit. You can learn more about Google Analytics and how it collects and
+                        processes data at https://policies.google.com/technologies/partner-sites.</p>
+
+                    <p>Cookies are files with small amounts of data, which may include information such as an anonymous unique
+                        identifier. Cookies are sent to your browser from a website and stored on your device. You can instruct your
+                        browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept
+                        cookies, you may not be able to use some portions of our Site.</p>
+
+                    <h2>Security</h2>
+
+                    <p>The security of your Personal Information is important to us, but remember that no method of transmission over
+                        the Internet, or method of electronic storage, is 100% secure. While we strive to use commercially acceptable
+                        means to protect your Personal Information, we cannot guarantee its absolute security.</p>
+
+                    <h2>Links to Other Sites</h2>
+
+                    <p>Our Site may contain links to other sites that are not operated by us. If you click on a third-party link, you
+                        will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site
+                        you visit. We have no control over and assume no responsibility for the content, privacy policies or practices
+                        of any third-party sites or services.</p>
+
+                    <h2>Changes to This Privacy Policy</h2>
+
+                    <p>We reserve the right and may update our Privacy Policy from time to time without notice. We will modify any
+                        changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy
+                        periodically for any changes. Changes to this Privacy Policy are effective immediately as of their posting on
+                        this page.</p>
 
                 </section>
 
@@ -189,6 +159,7 @@
             </div>
         </footer>
     </div>
+</div>
 </body>
 
 </html>
